# nemooCryptoTUI

./: README.md  main.cpp
tests/: .gitignore  CMakeLists.txt  buildScript.sh  buildScrpt.sh  notes.md
tests/.cache/clangd/index/: main.cpp.8906F18580766CE7.idx
tests/prevBuilds/button_animated:increase_decrease_2024_12_20/: ftxui_app
tests/prevBuilds/la locura_2024_12_19/: ftxui_app
tests/src/: main.cpp
